[package]
edition = "2021"
name = "stm32f7-embassy-eth"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-executor = { version = "0.2.0", path = "../embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-time = { version = "0.1.0", path = "../embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "unstable-traits", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["nightly", "defmt", "stm32f767zi", "unstable-pac", "time-driver-any", "chrono", "exti"]  }
# embassy-stm32 = { version = "0.1.0", path = "../embassy/embassy-stm32", features = ["nightly", "defmt", "stm32f767Zi", "time-driver-any", "exti", "unstable-pac", "unstable-traits"] }
embassy-net = { path = "../embassy/embassy-net", features = ["defmt", "nightly", "udp", "tcp", "dhcpv4", "medium-ethernet", "unstable-traits", "proto-ipv6"] }
embedded-io = { version = "0.4.0", features = ["async"] }
# embassy-usb = { version = "0.1.0", path = "../embassy/embassy-usb", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
# embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-alpha.10" }
# embedded-hal-async = { version = "=0.2.0-alpha.1" }
# embedded-nal-async = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.16", default-features = false }
rand_core = "0.6.4"
critical-section = "1.1"
micromath = "2.0.0"
# stm32-fmc = "0.2.4"
# embedded-storage = "0.3.0"
static_cell = "1.0"
chrono = { version = "^0.4", default-features = false}


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3 # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 0 # 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3 # <-
overflow-checks = false # <-
